--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,7 +19,8 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             cd ~/forum-api
-            git pull origin main
+            git pull origin master
             npm install
             npm run migrate up
+            non_existent_command
             pm2 restart forum-api
